Added santum error api doc
